Contact Us, login background improve

--- a/src/app/pages/help-support/help-support.page.html
+++ b/src/app/pages/help-support/help-support.page.html
@@ -52,7 +52,9 @@
 
           </div>
           <div *ngIf="option.active && $index == 1">
-            Opcion 1
+            <a href="mailto:diego.nahuel.campos@gmail.com">By Email</a> - diego.nahuel.campos@gmail.com<br><br>
+            <a href="sms:64223778327">By Text Message</a><br><br>
+            <a href="https://wa.me/64223778327">By WhatsApp Message</a><br><br>
           </div>
         </ion-card-content>
       </ion-card>
