Home page footer

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -103,4 +103,8 @@
 
   </div>
 
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed" #fab>
+    <ion-label id="footer">myTimesheet.app</ion-label>
+  </ion-fab>
+
 </ion-content>
