--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -82,3 +82,9 @@ ion-content.background{
   animation: headShake;
   animation-duration: 1s;
 }
+
+#footer {
+  color: rgb(78, 78, 78);
+  margin-left: -25%;
+  font-size: 0.8em;
+}
