Share app, by prod share fixes

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -104,7 +104,7 @@
   </div>
 
   <ion-fab vertical="bottom" horizontal="center" slot="fixed" #fab>
-    <ion-label id="footer">myTimesheet.app</ion-label>
+    <ion-label id="footer" (press)="shareApp()">myTimesheet.app</ion-label>
   </ion-fab>
 
 </ion-content>
