--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -89,3 +89,9 @@ ion-content.background{
   font-size: 0.8em;
   font-family: fantasy;
 }
+
+#footerOffLine {
+  font-size: 0.8em;
+  margin-left: -13%;
+  color: green;
+}
