Change mytimesheet.app font, update come to current week

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -87,7 +87,7 @@ ion-content.background{
   color: rgb(78, 78, 78);
   margin-left: -25%;
   font-size: 0.8em;
-  font-family: fantasy;
+  // font-family: fantasy;
 }
 
 #footerOffLine {
