--- a/src/app/pages/new-time/new-time.page.scss
+++ b/src/app/pages/new-time/new-time.page.scss
@@ -35,3 +35,13 @@ ion-content.background{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+#rates {
+    margin-left: 30px;
+    background-color: #d5d5d4;
+}
+
+#taskMEssage {
+    font-size: 14px;
+    color: #595959;
+}
