--- a/src/app/pages/settings/settings.page.scss
+++ b/src/app/pages/settings/settings.page.scss
@@ -5,6 +5,11 @@ ion-content.background{
 .rates {
     margin: 40px;
 }
+
+.tasksList {
+    margin: 40px;
+}
+
 .offlineMode {
     margin: 40px;
 }
