--- a/src/app/pages/new-time/new-time.page.html
+++ b/src/app/pages/new-time/new-time.page.html
@@ -101,12 +101,34 @@
   </ion-item>
 
   <ion-item>
+    <ion-label>Task</ion-label>
+    <ion-select [(ngModel)]="selectedTask">
+      <ion-select-option *ngFor="let task of settings.tasks" [value]="task">{{task.name}}</ion-select-option>
+    </ion-select>
+  </ion-item>
+  
+  <div id="rates" *ngIf="selectedTask.name !== ''">
+    <ion-item *ngIf="!newDate.byProd" lines="none">
+      <ion-label position="floating">Hourly Rate</ion-label>
+      <ion-input [(ngModel)]="selectedTask.hourlyRate"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="newDate.byProd" lines="none">
+      <ion-label position="floating">Production pay</ion-label>
+      <ion-input [(ngModel)]="selectedTask.prodRate"></ion-input>
+    </ion-item>
+  </div>
+
+  <ion-item *ngIf="createTaskMessage" lines="none">
+    <ion-label id="taskMEssage">You can add new tasks in <a (click)="goToSettings()">Settings</a>.</ion-label>
+  </ion-item>
+
+  <ion-item>
     <ion-label position="floating">Comments</ion-label>
     <ion-input [(ngModel)]="newDate.comments"></ion-input>
   </ion-item>
 
   <!-- <ion-button expand="block" color="primary" (click)="saveTime()">Add Time</ion-button> -->
-  <ion-button expand="block" color="primary" (click)="saveTime()">{{ editMode ? ('Update') : ('Save') }}</ion-button>
+  <ion-button [disabled]="readyToSave()" expand="block" color="primary" (click)="saveTime()">{{ editMode ? ('Update') : ('Save') }}</ion-button>
 
 
 </ion-content>
