Task style improvements

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -98,4 +98,6 @@ ion-content.background{
 
 #taskName {
   display: block;
+  font-weight: bold;
+  background-image: linear-gradient(to bottom, #cfd0d6, #f8f8f8);
 }
