Total amounts fixed, edit with new tasks

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -26,7 +26,7 @@
   </a>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" #fab>
-    <ion-label>Version 1.013_10(offline beta)</ion-label>
+    <ion-label>Version 1.20(task beta)</ion-label>
   </ion-fab>
 
 </ion-content>
